<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>actions_challenge</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="lijovijayan00@gmail.com">lijovijayan</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  
  <depend>ros2_learning_advanced_concepts_interfaces</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
